--- a/CSS/TextFontColorStyle.css
+++ b/CSS/TextFontColorStyle.css
@@ -60,5 +60,4 @@ h3 {
   color: black;
   padding: 15px;
   margin: 0;
-  overflow: auto;
 }
